<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BooruView</string>
	<string name="app_config_name">Settings</string>
	<string name="app_serverEdit_name">Settings</string>
	
    <string name="menuSave">Save</string>
	<string name="menuCopyPage">Copy page URL</string>
	<string name="menuCopyImage">Copy image URL</string>
	<string name="menuDetails">Details...</string>
	<string name="menuOpenBrowser">In browser...</string>
	<string name="msgSaving">Saving %1$s in %2$s...</string>
	<string name="ratingS">safe</string>
	<string name="ratingQ">questionable</string>
	<string name="ratingE">explicit</string>
	
	<string name="alertTagSearch">Tags:</string>
	<string name="alertJumpPage">Jump to page:</string>
	
	<!--<string name="menuCacheInfo">Cache info</string>
	<string name="menuPurgeCache">Clear Cache</string>-->
	<string name="msgPurged">Cache has been purged.</string>
	<string name="menuTagClear">Clear tag search</string>
	<string name="menuSearchPost">Search posts...</string>
	<string name="menuGoToPage">Jump to page...</string>
	<string name="menuServer">Servers...</string>
	
	<string name="menuPreferences">Settings...</string>
	<string name="pgroup_cache">Cache</string>
	<string name="pref_cacheInfo">Info</string>
	<string name="pref_cacheSize">Size limit</string>
	<string name="pref_cachePreview">Previews</string>
	<string name="pref_cachePreview_summOn">Stores all images in cache.</string>
	<string name="pref_cachePreview_summOff">Stores only the thumbnails.</string>
	<string name="pref_modeSafe">Safe Mode</string>
	<string name="pref_modeSafe_summOn">Hides NSFW images.</string>
	<string name="pref_modeSafe_summOff">Shows NSFW images.</string>
	<string name="pref_purgeBtn">Clear Cache</string>
	
</resources>
