<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/pgroup_cache"
		>
		<Preference
			android:key="pref_cacheInfo"
			android:title="@string/pref_cacheInfo"
			android:summary=""
			/>
		<Preference
			android:key="pref_cacheSizeBtn"
			android:title="@string/pref_cacheSize"
			android:summary=""
			/>
		<SwitchPreference
			android:key="pref_cachePreview"
			android:title="@string/pref_cachePreview"
			android:switchTextOn="On"
			android:switchTextOff="Off"
			android:summaryOn="@string/pref_cachePreview_summOn"
			android:summaryOff="@string/pref_cachePreview_summOff"
			android:defaultValue="false"
			/>
		<SwitchPreference
			android:key="pref_modeSafe"
			android:title="@string/pref_modeSafe"
			android:switchTextOn="SFW"
			android:switchTextOff="NSFW"
			android:summaryOn="@string/pref_modeSafe_summOn"
			android:summaryOff="@string/pref_modeSafe_summOff"
			android:defaultValue="true"
			/>
		<Preference
			android:key="pref_purgeBtn"
			android:title="@string/pref_purgeBtn"
			/>
	</PreferenceCategory>
</PreferenceScreen>
